--- a/views/pages/buyConfirm.ejs
+++ b/views/pages/buyConfirm.ejs
@@ -36,7 +36,7 @@
 <script>
     function irFactura() {
         var infoUser = localStorage.getItem("user")
-        var idProductos = localStorage.getItem("idProductos")
+        var idProductos = localStorage.getItem("idProducto")
        
         document.getElementById("inputUserHiddenFactura").value = infoUser;
         document.getElementById("inputProductosHiddenFactura").value = idProductos;
