--- a/views/pages/buyConfirm.ejs
+++ b/views/pages/buyConfirm.ejs
@@ -34,6 +34,8 @@
     <%- include('../partials/footer'); %>
 </footer>
 <script>
+    let informacionCompra = "<%= infoCompra %>"
+    sessionStorage.setItem("infoCompra", informacionCompra)
     function irFactura() {
         var infoUser = localStorage.getItem("user")
         var idProductos = localStorage.getItem("idProducto")
