--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -3,11 +3,11 @@
 
 <head>
     <%- include('../partials/head'); %>
-    <script>
-        let name = ('<%-info%>');
-        console.log(name);
-        localStorage.setItem("user", name);
-    </script>
+        <script>
+            let name = ('<%-info%>');
+            // console.log(name);
+            localStorage.setItem("user", name);
+        </script>
 </head>
 
 <body>
@@ -105,47 +105,71 @@
                 <!--! ***MODIFICAR VINILOS ****-->
 
                 <div class="col-4 ">
-                    <form action="/adminModificar" method="POST" id="fmAdminMdf">
+                    <form action="/updateDisco" method="POST" id="fmAdminMdf">
                         <h5>Modificar vinilo</h5>
 
 
+                        <!-- ! *** SELECCIONA TITULO DISCO MODIFICAR ***-->
+
+                        <input type="hidden" class="form-control" placeholder="" name="nombreSelect" value=""
+                            id="mdfselect">
+                        <div class="input-group input-group-sm mb-2">
+                            <input type="hidden" name="id_vinilo" value="<%= infoDisco %>" id="infoTodo"><br>
+                            <select class="form-control" id="selection">
+
+                                <% for(let i=0 ; i < infoDisco.length ; i++) { %>
+                                    <option>
+                                        <%=infoDisco[i].titulo%>
+                                    </option>
+                                    <% } %>
+                            </select>
+                            <script>
+
+                                const element = document.getElementById("selection");
+                                element.addEventListener("blur", recogertitulo);
+
+                                function recogertitulo() {
+                                    var category = document.getElementById("selection").options[document.getElementById("selection").selectedIndex].value;
+                                    document.getElementById("mdfselect").value = category;
+                                    console.log(category);
+                                    let todoDisco = document.getElementById("infoTodo").value;
+                                }
+                            </script>
+                        </div>
+                        <span></span>
                         <!-- ! *** TÍTULO ***-->
 
                         <div class="input-group input-group-sm mb-2">
                             <label for="titulo" class="input-group-text">Título</label>
-                            <input type="text" class="form-control" placeholder="" name="titulo" id="mdfTitulo"
-                                required><br>
+                            <input type="text" class="form-control" placeholder="" name="titulo" id="mdfTitulo"><br>
                         </div>
                         <span></span>
                         <!--! *** AUTOR ***-->
 
                         <div class="input-group input-group-sm mb-2">
                             <label for="autor" class="input-group-text">Autor</label>
-                            <input type="text" class="form-control" placeholder="" name="autor" id="mdfAutor"
-                                required><br>
+                            <input type="text" class="form-control" placeholder="" name="autor" id="mdfAutor"><br>
                         </div>
                         <span></span>
                         <!--! *** GÉNERO***-->
 
                         <div class="input-group input-group-sm mb-2">
                             <label for="genero" class="input-group-text">Género</label>
-                            <input type="text" class="form-control" placeholder="" name="genero" id="mdfGenero"
-                                required><br>
+                            <input type="text" class="form-control" placeholder="" name="genero" id="mdfGenero"><br>
                         </div>
                         <span></span>
                         <!--! *** AÑO ***-->
 
                         <div class="input-group input-group-sm mb-2">
                             <label for="ano" class="input-group-text">Año</label>
-                            <input type="text" class="form-control" placeholder="" name="ano" id="mdfAnio" required><br>
+                            <input type="text" class="form-control" placeholder="" name="ano" id="mdfAnio"><br>
                         </div>
                         <span></span> <span></span>
                         <!--! *** NÚMERO ***-->
 
                         <div class="input-group input-group-sm mb-2 ">
                             <label for="numDisco" class="input-group-text">Número</label>
-                            <input type="text" class="form-control" placeholder="" name="numDisco" id="mdfnumDisco"
-                                aria-describedby="numDisco" required>
+                            <input type="text" class="form-control" placeholder="" name="numDisco" id="mdfnumDisco">
                         </div>
                         <span></span>
 
@@ -155,23 +179,22 @@
                         <div class="input-group input-group-sm mb-2 ">
                             <label for="precio" class="input-group-text">Precio</label>
                             <input type="number" class="form-control" placeholder="" name="precio" id="mdfPrecio"
-                                aria-describedby="precio" required>
+                                aria-describedby="precio">
                         </div>
                         <span></span>
 
-                     <!--! *** IMG URL ***-->
+                        <!--! *** IMG URL ***-->
 
-                     <div class="input-group input-group-sm mb-2 ">
-                        <label for="imgUrl" class="input-group-text">ImgUrl</label>
-                        <input type="text" class="form-control" placeholder="" name="imgUrl" id="mdfImgUrl"
-                            aria-describedby="imgUrl" required>
-                    </div>
-                    <span></span>
+                        <div class="input-group input-group-sm mb-2 ">
+                            <label for="imgUrl" class="input-group-text">ImgUrl</label>
+                            <input type="text" class="form-control" placeholder="" name="imgUrl" id="mdfImgUrl"
+                                aria-describedby="imgUrl">
+                        </div>
+                        <span></span>
 
-                        <!-- BOTÓN MODIFICAR -->
+                        <!--! BOTÓN MODIFICAR -->
                         <div class="mb-2">
-                            <button class="btn btn-outline-secondary bg-dark" type="submit"
-                                id="btInsertarVinilo">Modificar un vinilo</button>
+                            <button class="btn btn-outline-secondary bg-dark" type="submit" id="btInsertarVinilo">Modificar un vinilo</button>
                         </div>
                     </form>
                 </div>
@@ -179,15 +202,34 @@
 
                 <!--! BORRAR -->
                 <div class="col-4 ">
-                    <form action="/adminBorrar" method="POST" id="fmAdminBorrar">
+                    <form action="/deleteDisco" method="POST" id="fmAdminBorrar">
 
                         <h5>Borrar vinilo</h5>
-                        <!--! *** POR ID BORRAR ***-->
-
+                        <!--! *** POR NOMBRE BORRAR ***-->
                         <div class="input-group input-group-sm mb-2">
-                            <label for="borrar" class="input-group-text">ISBN</label>
-                            <input type="number" class="form-control" placeholder="" name="borrar" id="borrar"
-                                required><br>
+                            <input type="hidden" class="form-control" placeholder="" name="nombreSelect" value=""
+                                id="deteleSelect"><br>
+                           
+                            <select class="form-control" id="selection2">
+
+                                <% for(let i=0 ; i < infoDisco.length ; i++) { %>
+                                    <option>
+                                        <%=infoDisco[i].titulo%>
+                                    </option>
+                                    <% } %>
+                            </select>
+                            <script>
+
+                                const element2 = document.getElementById("selection2");
+                                element2.addEventListener("blur", recogertitulo);
+
+                                function recogertitulo() {
+                                    var category2 = document.getElementById("selection2").options[document.getElementById("selection2").selectedIndex].value;
+                                    document.getElementById("deteleSelect").value = category2;
+                                    console.log(category2);
+                                    let todoDisco2 = document.getElementById("infoTodo").value;
+                                }
+                            </script>
                         </div>
                         <span></span>
 
