--- a/views/pages/registerLogin.ejs
+++ b/views/pages/registerLogin.ejs
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <%- include('../partials/head'); %>
+        <!-- <script>
+            let validacion = '<%%=validation%%>'
+            console.log(validacion);
+        </script> -->
+
 </head>
 
 <body>
     <header>
         <%- include('../partials/header'); %>
     </header>
+    <!-- <div class="alert alert-success" role="alert">Registro correcto</div>
+    <div class="alert alert-danger" role="alert"> Hay algun error en algun campo </div> -->
+    <!-- <script>
+        if (validacion === "inicio") {
+            document.getElementsByClassName("alert-success")[0].style.display = "none";
+            document.getElementsByClassName("alert-danger")[0].style.display = "none";
+        }
+        if (validacion === "correcto") {
+            document.getElementsByClassName("alert-danger")[0].style.display = "none";
+        }
+        if (validacion === "incorrecto") {
+            document.getElementsByClassName("alert-success")[0].style.display = "none";
+        }
+
+    </script> -->
+
     <main>
         <!-- ! FORMULARIOS DE LOGIN Y REGISTER -->
 
@@ -21,10 +41,7 @@
         <div class="container mt-3" id="div-register">
             <div class="row justify-content-evenly">
                 <div class="col-4 ">
-                    <form action="/registro" method="POST" id="fmRegister"
-                    
-
-                        <!--! ***REGISTER ****-->
+                    <form action="/registro" method="POST" id="fmRegister" <!--! ***REGISTER ****-->
                         <h5>Regístrate</h5>
 
                         <!--! *** Nombre ***-->
@@ -65,7 +82,7 @@
                             <input type="password" class="form-control" placeholder="Confirmar Password"
                                 name="password2" id="password2" required><br>
                         </div>
-                        <span></span> <span></span> 
+                        <span></span> <span></span>
                         <!--! *** DNI ***-->
 
                         <div class="input-group input-group-sm mb-2 ">
@@ -75,9 +92,9 @@
                         </div>
                         <span></span>
 
-                         <!--! *** Teléfono ***-->
+                        <!--! *** Teléfono ***-->
 
-                         <div class="input-group input-group-sm mb-2 ">
+                        <div class="input-group input-group-sm mb-2 ">
                             <label for="tlf" class="input-group-text">Teléfono</label>
                             <input type="text" class="form-control" placeholder="Ej: 695403647" name="tlf" id="tlf"
                                 aria-describedby="nameHelp" required>
@@ -92,13 +109,13 @@
                                 name="direccion" id="direccion" aria-describedby="nameHelp" required>
                         </div>
                         <span></span>
-                       
+
                         <!--! *** CP ***-->
 
                         <div class="input-group input-group-sm mb-2 ">
                             <label for="cp" class="input-group-text">Código Postal</label>
-                            <input type="text" class="form-control" placeholder="Ej: 28033"
-                                name="cp" id="cp" aria-describedby="nameHelp" required>
+                            <input type="text" class="form-control" placeholder="Ej: 28033" name="cp" id="cp"
+                                aria-describedby="nameHelp" required>
                         </div>
                         <span></span>
 
@@ -106,8 +123,8 @@
 
                         <div class="input-group input-group-sm mb-2 ">
                             <label for="poblacion" class="input-group-text">Población</label>
-                            <input type="text" class="form-control" placeholder="Ej: Sevilla"
-                                name="poblacion" id="poblacion" aria-describedby="nameHelp" required>
+                            <input type="text" class="form-control" placeholder="Ej: Sevilla" name="poblacion"
+                                id="poblacion" aria-describedby="nameHelp" required>
                         </div>
                         <span></span>
 
@@ -122,7 +139,7 @@
 
                 <div class="col-4 ">
                     <form action="/login" method="POST" id="fmLogin">
-                       
+
                         <h5>Ya tengo cuenta</h5>
                         <!--! *** Email ***-->
 
@@ -153,4 +170,5 @@
         <%- include('../partials/footer'); %>
     </footer>
 </body>
+
 </html>
