--- a/views/pages/perfil.ejs
+++ b/views/pages/perfil.ejs
@@ -15,7 +15,9 @@
   <main>
     <div class="container my-5 d-flex justify-content-evenly">
       <button type="button" class="btn btn-outline-secondary bg-dark">Historial</button>
-      <button type="button" class="btn btn-outline-secondary bg-dark" href="/modDatos">Modificar mis datos</button>
+      <form method="GET" action="/modificarPerfil">
+      <button type="submit" class="btn btn-outline-secondary bg-dark">Modificar mis datos</button>
+      </form>
     </div>
     <div class="container d-flex justify-content-center">
       <h4 class="display-6">Sugerencias para ti</h4>
