--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
         
         <div class="collapse navbar-collapse justify-content-center " id="navbarNavAltMarkup">
             <div class="navbar-nav align-items-center">
-            <a class="nav-link link-info" id="nombreSession"></a>
+            <a class="nav-link link-info" ><h5 id="nombreSession"></h5></a>
 
                 <form id="formVolverAdmin" method="POST" action="/volverAdmin">
                     <input type="hidden" name="infoAdmin" id="infoAdmin" value="">
@@ -103,7 +103,7 @@
     } else {
         // Si LOGUEAS y no eres ADMIN
         if (!datoUser.admin) {
-            document.getElementById("nombreSession").innerText = datoUser.nombre;
+            document.getElementById("nombreSession").innerText = "Bienvenido, " + datoUser.nombre + "!";
             document.getElementById("registerLogin").style.display = 'none';
             document.getElementById("nombreAdmin").style.display = 'none';
             document.getElementById("logout").style.display = 'block';
@@ -124,10 +124,9 @@
         document.getElementById("formVolverAdmin").submit();
 
     }
-</script>
-<script>
+    
     function recuperarCarrito() {
-        var carritoRecuperado = localStorage.getItem("user");
+        var carritoRecuperado = localStorage.getItem("idProducto");
         document.getElementById("inputCarrito").value = carritoRecuperado;
         document.getElementById("formCarrito").submit();
     }
