--- a/views/pages/busquedaTitulo.ejs
+++ b/views/pages/busquedaTitulo.ejs
@@ -31,21 +31,21 @@
                 <div class="col-lg mt-3">
                     <div class="card" style="width: 18rem;">
                         <form action="/verProducto" method="POST">
-                            <input type="image" class="card-img-top" src=" <%= infoVinilos2.imgUrl %> "
+                            <input type="image" class="card-img-top" src=" <%= infoVinilos2[0].imgUrl %> "
                                 alt="Submit Form">
-                            <input type="hidden" name="id_vinilo" value="<%= infoVinilos2.id_vinilo %>">
+                            <input type="hidden" name="id_vinilo" value="<%= infoVinilos2[0].id_vinilo %>">
 
                             <div class="card-body">
                                 <h5 class="card-title">
-                                    <%= infoVinilos2.titulo %>
+                                    <%= infoVinilos2[0].titulo %>
                                 </h5>
                                 <p class="card-text">
-                                    <%= infoVinilos2.autor %>
+                                    <%= infoVinilos2[0].autor %>
                                         <br>
-                                        <%= infoVinilos2.precio %>
+                                        <%= infoVinilos2[0].precio %>
                                 </p>
                                 <a href="#" class="btn btn-dark"
-                                    onclick="addProducto('<%= infoVinilos2.id_vinilo %>')">Añadir al
+                                    onclick="addProducto('<%= infoVinilos2[0].id_vinilo %>')">Añadir al
                                     carrito</a>
                             </div>
                         </form>
