--- a/views/pages/buscarHist.ejs
+++ b/views/pages/buscarHist.ejs
@@ -18,17 +18,17 @@
             <div class="row justify-content-evenly">
                 <div class="col-4 ">
                 </div>
-                <form>
+                <form action="/historialNoLogin" method="POST">
                     <div class="mb-3">
                         <label for="busHistoEmail" class="form-label">Introduce tu email</label>
-                        <input type="email" class="form-control" id="busHistoEmail" aria-describedby="email">
+                        <input type="email" class="form-control" id="busHistoEmail" name="email" required>
                         <div id="busHisto" class="form-text">Recuerda que tiene que ser el mismo con el que te
                             registraste.
                         </div>
                     </div>
                     <div class="mb-3">
                         <label for="busHistoDni" class="form-label">Introduce tu DNI</label>
-                        <input type="text" class="form-control" id="busHistoDni">
+                        <input type="text" class="form-control" id="busHistoDni" name="dni" required>
                     </div>
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
