--- a/views/pages/factura.ejs
+++ b/views/pages/factura.ejs
@@ -11,9 +11,17 @@
 
 
 <main>
+    <br>
+    <br>
     <div class="container">
-        <h1>Aquí va el contenido</h1>
-        <p>Más de lo mismo</p>
+        <h2>Aquí tienes tu factura. Puedes descargartela o imprimirtela.</h2>
+        <br>
+        <h4>Si lo prefieres te la podemos mandar a tu email</h4>
+    </div>
+    <br>
+    <br>
+    <div class="container justify-content-center">
+        <embed src="/factura_vinilosFull.pdf" width="1400" height="1300" type="application/pdf">
     </div>
 </main>
 
